--- a/LED_Tile_Test.ioc
+++ b/LED_Tile_Test.ioc
@@ -1,26 +1,42 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F4
+PE3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
 ProjectManager.MainLocation=Core/Src
+NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 USB_DEVICE.CLASS_NAME_FS=CDC
+ProjectManager.ProjectFileName=LED_Tile_Test.ioc
 PH0-OSC_IN.Signal=RCC_OSC_IN
 RCC.CortexFreq_Value=168000000
+PA7.Mode=Full_Duplex_Master
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F407VETx
+Mcu.PinsNb=19
 SPI1.VirtualType=VM_MASTER
-TIM1.IPParameters=Channel-Input_Capture1_from_TI1
+ProjectManager.NoMain=false
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+USB_DEVICE.VirtualModeFS=Cdc_FS
 RCC.PLLCLKFreq_Value=168000000
 RCC.PLLQCLKFreq_Value=48000000
 PC5.Locked=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_TIM1_Init-TIM1-false-HAL-true
+PC4.Signal=GPIO_Output
+PE4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA11.Mode=Device_Only
 RCC.RTCFreq_Value=32000
+ProjectManager.DefaultFWLocation=true
 PA6.GPIO_Label=LED0
 USB_DEVICE.VirtualMode-CDC_FS=Cdc
-SH.S_TIM1_CH1.ConfNb=1
+ProjectManager.DeletePrevious=true
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+PC5.GPIO_PuPd=GPIO_PULLUP
+USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
 PinOutPanel.RotationAngle=0
+RCC.FamilyName=M
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
+PA13.Signal=SYS_JTMS-SWDIO
 Mcu.IP4=SYS
 RCC.FCLKCortexFreq_Value=168000000
 Mcu.IP5=TIM1
@@ -34,21 +50,29 @@ PA12.Signal=USB_OTG_FS_DP
 PE4.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 SH.GPXTI3.ConfNb=1
 Mcu.UserConstants=
+ProjectManager.TargetToolchain=STM32CubeIDE
+I2C1.I2C_Mode=I2C_Fast
 Mcu.ThirdPartyNb=0
 SPI1.Direction=SPI_DIRECTION_2LINES
 RCC.HCLKFreq_Value=168000000
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 Mcu.IPNb=8
 RCC.I2SClocksFreq_Value=192000000
 ProjectManager.PreviousToolchain=
+PC5.GPIOParameters=GPIO_PuPd,GPIO_Label
 RCC.APB2TimFreq_Value=168000000
 PB6.Signal=I2C1_SCL
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 RCC.VcooutputI2S=192000000
+PE4.Locked=true
 PB6.Mode=I2C
 SPI1.CalculateBaudRate=21.0 MBits/s
 Mcu.Pin6=PA7
 Mcu.Pin7=PC4
+ProjectManager.RegisterCallBack=
 Mcu.Pin8=PC5
-Mcu.Pin9=PE9
+Mcu.Pin9=PA11
+RCC.LSE_VALUE=32768
 RCC.AHBFreq_Value=168000000
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin0=PE3
@@ -57,138 +81,112 @@ GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PH0-OSC_IN
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PA5
+RCC.VCOI2SOutputFreq_Value=384000000
 Mcu.Pin5=PA6
+PA5.Signal=SPI1_SCK
 ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=8000000
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
-MxDb.Version=DB.6.0.21
-PB4.Mode=Full_Duplex_Master
-ProjectManager.BackupPrevious=false
-RCC.VCOInputFreq_Value=2000000
-PC4.GPIO_Label=nOE
-PE9.Signal=S_TIM1_CH1
-PA14.Mode=Serial_Wire
-File.Version=6
-PE4.GPIO_Label=K0
-PE3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PE3.Locked=true
-PB7.Signal=I2C1_SDA
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PE4.Signal=GPXTI4
-ProjectManager.HalAssertFull=false
-ProjectManager.ProjectName=LED_Tile_Test
-PH1-OSC_OUT.Mode=HSE-External-Oscillator
-RCC.MCO2PinFreq_Value=168000000
-Mcu.Package=LQFP100
-PA6.Signal=GPIO_Output
-NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-ProjectManager.ToolChainLocation=
-RCC.LSI_VALUE=32000
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-USB_OTG_FS.VirtualMode=Device_Only
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
-PA6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB1TimFreq_Value=84000000
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PC4.Locked=true
-PC5.Signal=GPIO_Output
-USB_OTG_FS.IPParameters=VirtualMode
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-ProjectManager.CustomerFirmwarePackage=
-PC4.GPIOParameters=GPIO_Label
-PB4.Signal=SPI1_MISO
-PA5.Mode=Full_Duplex_Master
-PE3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PA6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
-NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-ProjectManager.ProjectFileName=LED_Tile_Test.ioc
-PA7.Mode=Full_Duplex_Master
-Mcu.PinsNb=19
-ProjectManager.NoMain=false
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
-USB_DEVICE.VirtualModeFS=Cdc_FS
-PC4.Signal=GPIO_Output
-PE4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-ProjectManager.DefaultFWLocation=true
-ProjectManager.DeletePrevious=true
-RCC.APB1CLKDivider=RCC_HCLK_DIV4
-PC5.GPIO_PuPd=GPIO_PULLUP
-USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
-RCC.FamilyName=M
-PA13.Signal=SYS_JTMS-SWDIO
-SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
-ProjectManager.TargetToolchain=STM32CubeIDE
-I2C1.I2C_Mode=I2C_Fast
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
-PC5.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE4.Locked=true
-ProjectManager.RegisterCallBack=
-RCC.LSE_VALUE=32768
-RCC.VCOI2SOutputFreq_Value=384000000
-PA5.Signal=SPI1_SCK
 board=custom
 SH.GPXTI3.0=GPIO_EXTI3
 RCC.VCOOutputFreq_Value=336000000
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 ProjectManager.LastFirmware=false
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
+MxDb.Version=DB.6.0.21
 RCC.APB2Freq_Value=84000000
+PB4.Mode=Full_Duplex_Master
+ProjectManager.BackupPrevious=false
 MxCube.Version=6.2.1
+RCC.VCOInputFreq_Value=2000000
+PC4.GPIO_Label=nOE
 SPI1.Mode=SPI_MODE_MASTER
+PA14.Mode=Serial_Wire
+File.Version=6
+PE4.GPIO_Label=K0
 VP_SYS_VS_Systick.Mode=SysTick
 RCC.EthernetFreq_Value=168000000
+PE3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE3.GPIO_PuPd=GPIO_PULLUP
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
+PE3.Locked=true
+PB7.Signal=I2C1_SDA
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+PE4.Signal=GPXTI4
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F407V(E-G)Tx
+ProjectManager.HalAssertFull=false
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
 RCC.RTCHSEDivFreq_Value=4000000
+ProjectManager.ProjectName=LED_Tile_Test
 ProjectManager.UnderRoot=true
 PE4.GPIO_PuPd=GPIO_PULLUP
 Mcu.IP6=USB_DEVICE
 Mcu.IP7=USB_OTG_FS
 ProjectManager.CoupleFile=false
+PH1-OSC_OUT.Mode=HSE-External-Oscillator
 RCC.48MHZClocksFreq_Value=48000000
+RCC.MCO2PinFreq_Value=168000000
 RCC.SYSCLKFreq_VALUE=168000000
+Mcu.Package=LQFP100
+PA6.Signal=GPIO_Output
 SH.GPXTI4.0=GPIO_EXTI4
 PA12.Mode=Device_Only
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 PC5.GPIO_Label=nCS
-TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 ProjectManager.CompilerOptimize=6
+ProjectManager.ToolChainLocation=
+RCC.LSI_VALUE=32000
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 PB7.Mode=I2C
 PA11.Signal=USB_OTG_FS_DM
 PA14.Signal=SYS_JTCK-SWCLK
+USB_OTG_FS.VirtualMode=Device_Only
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PB6
+Mcu.Pin15=PB7
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PB7
+Mcu.Pin16=VP_SYS_VS_Systick
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 SH.GPXTI4.ConfNb=1
-Mcu.Pin13=PA14
-Mcu.Pin14=PB4
+Mcu.Pin13=PB4
+Mcu.Pin14=PB6
+NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM1_VS_ClockSourceINT
 RCC.HSI_VALUE=16000000
 Mcu.Pin18=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+PA6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 RCC.PLLQ=7
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PA12
-Mcu.Pin12=PA13
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
 RCC.PLLM=4
 RCC.PLLN=168
-Mcu.Pin10=PA11
+Mcu.Pin10=PA12
+RCC.APB1TimFreq_Value=84000000
 PE3.Signal=GPXTI3
 PE3.GPIO_Label=K1
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PC4.Locked=true
+PC5.Signal=GPIO_Output
+USB_OTG_FS.IPParameters=VirtualMode
 RCC.APB1Freq_Value=42000000
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+ProjectManager.CustomerFirmwarePackage=
+PC4.GPIOParameters=GPIO_Label
 ProjectManager.DeviceId=STM32F407VETx
 ProjectManager.LibraryCopy=1
+PB4.Signal=SPI1_MISO
+PA5.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA6.Locked=true
 isbadioc=false
